--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,29 @@
-body {background-color: #D4E6FE;}
-.contact-form {width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;}
+.form_input { width: 100%;
+  padding: 20px;
+  border: none;
+  border-radius: 15px;
+  outline: none;
+  color: #363df5;
+  background-color:  #d4e6fe;} 
+
+  .form_submit-btn {margin: 0 auto;
+    border: none;
+    padding: 20px;
+    border-radius: 20px;
+    color: #ffffff;
+    background-color: #363df5;
+    cursor: pointer;
+    transition: all 0.3s;}
+
+    body {
+      box-sizing: border-box;
+      font-weight: 400;
+      line-height: 1.6;
+    
+      font-size: 14px;
+      min-height: 100vh;
+    
+      display: flex;
+      display: center;
+      padding: 0 3.5rem;
+    }
